Fix scrolling on Safari
Grrr CSS e.t.c.

--- a/frontend/src/mainframe/mainframe.module.css
+++ b/frontend/src/mainframe/mainframe.module.css
@@ -35,6 +35,7 @@
 }
 
 .pageBody {
+    height: 100%;
     width: 100%;
     overflow: hidden;
     display: flex;
